fix image overlap on large sizes

--- a/public/css/landing-a2df9d.webflow.css
+++ b/public/css/landing-a2df9d.webflow.css
@@ -627,6 +627,7 @@ p {
   position: relative;
   z-index: 2;
   width: 85%;
+  max-width:700px;
 }
 
 .paragraph-2 {
